# ai-storytelling-backstage

./: CITATION.bib  LICENSE.txt  MODELS.md  README.md
code/: .gitignore  Demo (Extras).ipynb  Demo (Images).ipynb  Demo (Text).ipynb  Demo.ipynb  main.py  makefile  pyproject.toml  test-img.py  test.py  testing notebook.ipynb
code/aist/: common.py  extras.py  image.py  selftest.py  text.py
code/aist/extras/: safety.py  text.py
coursework/: AI_and_Storytelling_CW1.ipynb  AI_and_Storytelling_CW2.ipynb
docs/: index.css  index.html  work1.html
tools/moderation/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  server.mjs  template.env
tools/moderation/frontend/: index.html  package.json  pnpm-lock.yaml
tools/moderation/frontend/src/: App.svelte  app.css
tools/moderation/frontend/src/lib/: Results.svelte
workshops/01-boxes/: W01 - Tic Tac Toe.ipynb
workshops/02-rnn/: README.md  pyproject.toml  test.py
workshops/02-rnn/aist_workshops/: sentences.py
