[tool.poetry]
name = "aist"
version = "0.1.0"
description = "AI and Storytelling Central Codebase"
authors = ["Patrick Kage <p.kage@ed.ac.uk>"]

[tool.poetry.dependencies]
python = "^3.7"
transformers = {extras = ["torch"], version = "^4.20.1"}
min-dalle = "^0.4.4"
matplotlib = "^3.5.3"
# pinned from git version because this ISN'T ON PYPI YET!!!
requests = "^2.28.1"
diffusers = {git = "https://github.com/huggingface/diffusers"}
ftfy = "^6.1.1"

[tool.poetry.dev-dependencies]
ipykernel = "^6.15.0"
ipywidgets = "^7.7.1"
wandb = "^0.12.21"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
