[tool.poetry]
name = "aist-workshops"
version = "0.1.0"
description = ""
authors = ["Patrick Kage <p.kage@ed.ac.uk>"]
readme = "README.md"
packages = [{include = "aist_workshops"}]

[tool.poetry.dependencies]
python = "^3.8"
spacy = "^3.4.4"
numpy = "^1.24.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.20.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

