[tool.poetry]
name = "aist-workshops"
version = "0.1.0"
description = ""
authors = ["Patrick Kage <p.kage@ed.ac.uk>"]
readme = "README.md"
packages = [{include = "aist_workshops"}]

[tool.poetry.dependencies]
python = "^3.7"
# numpy = "1.21.6"

[tool.poetry.group.dev.dependencies]
spacy = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

